--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-app-reanimated-bug",
-    "slug": "my-app-reanimated-bug",
+    "name": "reanimated-headless-bug",
+    "slug": "reanimated-headless-bug",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -9,13 +9,15 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.pawicao.reanimatedheadlessbug"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.pawicao.reanimatedheadlessbug"
     },
     "web": {
       "bundler": "metro",
@@ -32,7 +34,9 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "react-native-edge-to-edge",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
