--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "my-app-reanimated-bug",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -21,7 +21,7 @@
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
-    "expo-font": "~13.0.4",
+    "expo-font": "^13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
@@ -30,13 +30,17 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "polished": "^4.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-edge-to-edge": "^1.4.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-nitro-modules": "^0.25.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-unistyles": "^3.0.0-beta.8",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -50,5 +54,8 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "trustedDependencies": [
+    "react-native-nitro-modules"
+  ]
 }
