update code for a showcase of a bug

--- a/app.json
+++ b/app.json
@@ -35,8 +35,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "react-native-edge-to-edge",
-      "expo-font"
+      "expo-font",
+      "react-native-edge-to-edge"
     ],
     "experiments": {
       "typedRoutes": true
